--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
         <section id="welcome-section" class="welcome-section">
-            <h1>Hey I am Mimic</h1>
+            <h1>Hey I am Mertcan</h1>
             <p>a web developer</p>
         </section>
     </header>
@@ -69,7 +69,7 @@
                 </p>
             </a>
         </article>
-        <a class="btn" href="https://codepen.io/FreeCodeCamp/" target="_blank">Show all
+        <a class="btn" href="https://codepen.io/FreeCodeCamp/" target="_blank">Show All
             <i class="fas fa-chevron-right"></i>
         </a>
     </section>
@@ -83,8 +83,8 @@
             <a href="https://facebook.com/freecodecamp" target="_blank" class="btn contact-details"><i class="fab fa-facebook-square"></i> Facebook</a>
             <a id="profile-link" href="https://github.com/freecodecamp" target="_blank" class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
             <a href="https://twitter.com/freecodecamp" target="_blank" class="btn contact-details"><i class="fab fa-twitter"></i> Twitter</a>
-            <a href="mailto:example@example.com" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a>
-            <a href="tel:555-555-5555" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call me</a>
+            <a href="mailto:example@example.com" class="btn contact-details"><i class="fas fa-at"></i> Send A Mail</a>
+            <a href="tel:555-555-5555" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call Me</a>
         </div>
     </section>
 
