--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -24,7 +24,7 @@
             </ul>
         </nav>
         <section id="welcome-section" class="welcome-section">
-            <h1>Hey I am Mertcan</h1>
+            <h1>Hey I am Mimic</h1>
             <p>a web developer</p>
         </section>
     </header>
